--- a/client/angular.json
+++ b/client/angular.json
@@ -30,7 +30,7 @@
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.sass"
             ],
-            "scripts": []
+            "scripts": [ "./node_modules/jquery/dist/jquery.min.js" ]
           },
           "configurations": {
             "production": {
