--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@types/jquery": "^3.3.29",
     "@types/socket.io": "^2.1.2",
+    "jquery": "^3.4.1",
     "ngx-socket-io": "^2.1.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
